Unify hashCode() and equals() for basic data types
* Make use of Objects.hash() where it makes sense, implicitly avoiding
  an NPE at least in DriveOrder.hashCode(). The resulting change in hash
  values uncovered a previously broken unit test, which we fix here,
  too.
* Make use of pattern variables to improve readability of equals()
  implementations.
* While here, avoid unnecessary object copies in constructors of
  DriveOrder.Destination and Route.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>